--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.6",
     "next": "16.0.1",
     "react": "19.2.0",
